<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reminderFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/title_baslik"
                    android:id="@+id/baslikTx"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/title_TS"
                    android:id="@+id/tarihsaatTx"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/title_adres"
                android:id="@+id/adresTx"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/title_oncelik"
                android:id="@+id/oncelikTx"
                android:inputType="numberDecimal"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/dosyaekleBt"
                android:text="@string/title_dosyaekle"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/Guncelle"
                android:text="@string/title_update"
                android:clickable="false"/>


        </LinearLayout>

    </RelativeLayout>

</FrameLayout>