<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gpsFragment">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">
          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:id="@+id/textLayout">
              <TextView
                  android:layout_width="200dp"
                  android:layout_height="50dp"
                  android:text="@string/title_latitude"
                  android:id="@+id/latitudeTx"/>
              <TextView
                  android:layout_width="200dp"
                  android:layout_height="50dp"
                  android:text="@string/title_longtitude"
                  android:id="@+id/longtitudeTx"/>
          </LinearLayout>

          <Button
              android:id="@+id/konumalBt"
              android:layout_width="match_parent"
              android:layout_height="50dp"
              android:layout_alignBottom="@+id/textLayout"
              android:layout_alignParentTop="true"
              android:text="@string/title_konum" />
          <Button
              android:layout_width="match_parent"
              android:layout_height="50dp"
              android:id="@+id/makeReminderBt"
              android:layout_marginTop="20dp"
              android:text="@string/title_Reminder"
              android:clickable="false"/>


      </LinearLayout>

  </RelativeLayout>

</FrameLayout>